@@ -95,6 +95,24 @@ if test x$enable_music_midi = xyes; then
     CFLAGS="$CFLAGS -DMID_MUSIC -I\$(top_srcdir)/timidity"
     MUSIC_SUBDIRS="$MUSIC_SUBDIRS timidity"
 fi
+AC_ARG_ENABLE(music-ogg,
+[  --enable-music-ogg      enable Ogg Vorbis music [default=yes]],
+              , enable_music_ogg=yes)
+if test x$enable_music_ogg = xyes; then
+    AC_MSG_CHECKING(for Ogg Vorbis headers and libraries)
+    have_vorbis=no
+    AC_TRY_COMPILE([
+     #include <vorbis/vorbisfile.h>
+    ],[
+    ],[
+    have_vorbis=yes
+    ])
+    AC_MSG_RESULT($have_vorbis)
+    if test x$have_vorbis = xyes; then
+        CFLAGS="$CFLAGS -DOGG_MUSIC"
+        LIBS="$LIBS -lvorbisfile -lvorbis"
+    fi
+fi
 AC_ARG_ENABLE(music-mp3,
 [  --enable-music-mp3      enable MP3 music via smpeg [default=yes]],
               , enable_music_mp3=yes)
