@@ -35,12 +35,6 @@
 #include "wave.h"
 #include "wavestream.h"
 
-/* Currently we only support a single stream at a time */
-static WAVStream *theWave = NULL;
-
-/* This is initialized by the music mixer */
-static SDL_mutex *music_lock = NULL;
-
 /* This is the format of the audio mixer data */
 static SDL_AudioSpec mixer;
 
@@ -55,13 +49,6 @@ static FILE *LoadAIFFStream (const char *file, SDL_AudioSpec *spec,
  */
 int WAVStream_Init(SDL_AudioSpec *mixerfmt)
 {
-	/* FIXME: clean up the mutex, or move it into music.c */
-	music_lock = SDL_CreateMutex();
-#ifndef macintosh /* Hmm.. */
-	if ( music_lock == NULL ) {
-		return(-1);
-	}
-#endif
 	mixer = *mixerfmt;
 	return(0);
 }
@@ -106,75 +93,58 @@ extern WAVStream *WAVStream_LoadSong(const char *file, const char *magic)
 /* Start playback of a given WAV stream */
 extern void WAVStream_Start(WAVStream *wave)
 {
-	SDL_mutexP(music_lock);
 	clearerr(wave->wavefp);
 	fseek(wave->wavefp, wave->start, SEEK_SET);
-	theWave = wave;
-	SDL_mutexV(music_lock);
 }
 
 /* Play some of a stream previously started with WAVStream_Start()
-   The music_lock is held while this function is called.
  */
-extern void WAVStream_PlaySome(Uint8 *stream, int len)
+extern void WAVStream_PlaySome(WAVStream *wave, Uint8 *stream, int len)
 {
 	long pos;
 
-	SDL_mutexP(music_lock);
-	if ( theWave && ((pos=ftell(theWave->wavefp)) < theWave->stop) ) {
-		if ( theWave->cvt.needed ) {
+	if ( (pos=ftell(wave->wavefp)) < wave->stop ) {
+		if ( wave->cvt.needed ) {
 			int original_len;
 
-			original_len=(int)((double)len/theWave->cvt.len_ratio);
-			if ( theWave->cvt.len != original_len ) {
+			original_len=(int)((double)len/wave->cvt.len_ratio);
+			if ( wave->cvt.len != original_len ) {
 				int worksize;
-				if ( theWave->cvt.buf != NULL ) {
-					free(theWave->cvt.buf);
+				if ( wave->cvt.buf != NULL ) {
+					free(wave->cvt.buf);
 				}
-				worksize = original_len*theWave->cvt.len_mult;
-				theWave->cvt.buf=(Uint8 *)malloc(worksize);
-				if ( theWave->cvt.buf == NULL ) {
-					SDL_mutexV(music_lock);
+				worksize = original_len*wave->cvt.len_mult;
+				wave->cvt.buf=(Uint8 *)malloc(worksize);
+				if ( wave->cvt.buf == NULL ) {
 					return;
 				}
-				theWave->cvt.len = original_len;
+				wave->cvt.len = original_len;
 			}
-			if ( (theWave->stop - pos) < original_len ) {
-				original_len = (theWave->stop - pos);
+			if ( (wave->stop - pos) < original_len ) {
+				original_len = (wave->stop - pos);
 			}
-			theWave->cvt.len = original_len;
-			fread(theWave->cvt.buf,original_len,1,theWave->wavefp);
-			SDL_ConvertAudio(&theWave->cvt);
-			memcpy(stream, theWave->cvt.buf, theWave->cvt.len_cvt);
+			wave->cvt.len = original_len;
+			fread(wave->cvt.buf,original_len,1,wave->wavefp);
+			SDL_ConvertAudio(&wave->cvt);
+			memcpy(stream, wave->cvt.buf, wave->cvt.len_cvt);
 		} else {
-			if ( (theWave->stop - pos) < len ) {
-				len = (theWave->stop - pos);
+			if ( (wave->stop - pos) < len ) {
+				len = (wave->stop - pos);
 			}
-			fread(stream, len, 1, theWave->wavefp);
+			fread(stream, len, 1, wave->wavefp);
 		}
 	}
-	SDL_mutexV(music_lock);
 }
 
 /* Stop playback of a stream previously started with WAVStream_Start() */
 extern void WAVStream_Stop(void)
 {
-	SDL_mutexP(music_lock);
-	theWave = NULL;
-	SDL_mutexV(music_lock);
 }
 
 /* Close the given WAV stream */
 extern void WAVStream_FreeSong(WAVStream *wave)
 {
 	if ( wave ) {
-		/* Remove song from the currently playing list */
-		SDL_mutexP(music_lock);
-		if ( wave == theWave ) {
-			theWave = NULL;
-		}
-		SDL_mutexV(music_lock);
-
 		/* Clean up associated data */
 		if ( wave->wavefp ) {
 			fclose(wave->wavefp);
@@ -187,16 +157,16 @@ extern void WAVStream_FreeSong(WAVStream *wave)
 }
 
 /* Return non-zero if a stream is currently playing */
-extern int WAVStream_Active(void)
+extern int WAVStream_Active(WAVStream *wave)
 {
 	int active;
 
-	SDL_mutexP(music_lock);
+	SDL_LockAudio();
 	active = 0;
-	if ( theWave && (ftell(theWave->wavefp) < theWave->stop) ) {
+	if ( ftell(wave->wavefp) < wave->stop ) {
 		active = 1;
 	}
-	SDL_mutexV(music_lock);
+	SDL_UnlockAudio();
 
 	return(active);
 }
